<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_newEntry">

    <fragment
        android:id="@+id/navigation_newEntry"
        android:name="com.example.zuckcapstonemaster.ui.newEntry.NewEntryFragment"
        android:label="@string/title_newEntry"
        tools:layout="@layout/fragment_new_entry" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.example.zuckcapstonemaster.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_newProgressPicture"
        android:name="com.example.zuckcapstonemaster.ui.newProgressPicture.NewProgressPictureFragment"
        android:label="@string/title_newProgressPicture"
        tools:layout="@layout/fragment_new_progress_picture" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.zuckcapstonemaster.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>