<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewEntryActivity">

    <TextView
        android:id="@+id/label_new_entry_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="200dp"
        android:background="@color/purple_200"
        android:padding="10dp"
        android:gravity="center"
        android:text="@string/new_entry_current_weight_label"
        android:textSize="20sp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/label_new_entry_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_new_entry_weight"
        android:layout_alignRight="@id/label_new_entry_weight"
        android:layout_alignLeft="@id/label_new_entry_weight"
        android:layout_marginTop="20dp"
        android:background="@color/purple_200"
        android:padding="10dp"
        android:gravity="center"
        android:text="@string/new_entry_current_date_label"
        android:textSize="20sp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/input_new_entry_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@id/label_new_entry_weight"
        android:gravity="center"
        android:hint="@string/new_entry_current_weight_input_hint"
        android:inputType="numberDecimal"
        android:padding="10dp"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/input_new_entry_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_new_entry_weight"
        android:layout_toRightOf="@id/label_new_entry_date"
        android:layout_alignLeft="@id/input_new_entry_weight"
        android:layout_alignRight="@id/input_new_entry_weight"
        android:layout_alignBottom="@id/label_new_entry_date"
        android:gravity="center"
        android:hint="@string/new_entry_current_date_input_hint"
        android:inputType="text"
        android:padding="10dp"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/button_new_entry_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_new_entry_date"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="40dp"
        android:background="@color/purple_200"
        android:textSize="20sp"
        android:text="Save Entry"
        android:onClick="addEntry"/>

    <Button
        android:id="@+id/button_new_entry_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_new_entry_date"
        android:layout_toRightOf="@id/button_new_entry_save"
        android:layout_marginTop="50dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="20dp"
        android:background="@color/purple_200"
        android:textSize="20sp"
        android:text="Cancel"
        android:onClick="goBack"/>


</RelativeLayout>